ajuste no git ignore

--- a/manga-site/.gitignore
+++ b/manga-site/.gitignore
@@ -31,3 +31,19 @@ dist-ssr
 *.njsproj
 *.sln
 *.sw?
+
+# Env files
+.env
+.env.*
+!.env.example
+
+# Python virtual env (caso use backend em Python)
+.venv/
+__pycache__/
+
+# MangaScraper ou uploads locais
+uploads/
+downloads/
+*.zip
+*.webp
+
